--- a/public/en/migraine.html
+++ b/public/en/migraine.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
 
     <img src="../img/akupunktur-migraene-zuerich.webp" alt="TCM Migraine Treatment Zurich" class="hero-img">
 
