--- a/public/en/headaches.html
+++ b/public/en/headaches.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     <img src="../img/akupunktur-kopfschmerzen-zuerich.webp" alt="TCM Headache Treatment Zurich" class="hero-img">
 
     <h1>Holistic Relief for Headaches – The TCM Approach</h1>
