--- a/public/en/dizziness.html
+++ b/public/en/dizziness.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     <img src="../img/akupunktur-schwindel-zuerich.webp" alt="TCM Dizziness Treatment Zurich" class="hero-img">
 
     <h1>Natural Treatment for Dizziness – Restoring Your Balance</h1>
