--- a/public/en/tinnitus.html
+++ b/public/en/tinnitus.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     <img src="../img/akupunktur-tinnitus-zuerich.webp" alt="TCM Tinnitus Treatment Zurich" class="hero-img">
 
     <h1>Natural Tinnitus Treatment – Finding Your Inner Quiet</h1>
