--- a/public/en/trigeminal-neuralgia.html
+++ b/public/en/trigeminal-neuralgia.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     <img src="../img/akupunktur-trigeminusneuralgie-zuerich.webp" alt="TCM Trigeminal Neuralgia Treatment Zurich" class="hero-img">
 
     <h1>Natural Relief for Trigeminal Neuralgia – Expert TCM Care</h1>
