--- a/public/de/blasenschwaeche.html
+++ b/public/de/blasenschwaeche.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Harnwegsinfekte natürlich behandeln mit TCM | TAI TCM Zürich</title>
+    <title>Blasenschwäche natürlich behandeln mit TCM | TAI TCM Zürich</title>
     <style>
         :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
         body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
@@ -22,45 +22,45 @@
 <body>
     <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     
-    <img src="../img/akupunktur-harnwegsinfekte-zuerich.webp" alt="TCM Behandlung bei Harnwegsinfekten Zürich" class="hero-img">
+    <img src="../img/akupunktur-blasenschwaeche-zuerich.webp" alt="TCM Behandlung bei Blasenschwäche Zürich" class="hero-img">
 
-    <h1>Harnwegsinfekte natürlich behandeln – Hilfe durch TCM</h1>
+    <h1>Blasenschwäche & Inkontinenz – Hilfe durch TCM</h1>
 
-    <h2>1. Wie sieht die TCM Harnwegsinfekte?</h2>
+    <h2>1. Wie versteht die TCM Blasenschwäche?</h2>
     <div class="highlight-box">
-        <p>Die TCM versteht wiederkehrende Blasenentzündungen als Zeichen innerer Dysbalance – meist durch Feuchte-Hitze im Unteren Erwärmer oder eine Schwäche von Milz und Niere verursacht.</p>
+        <p>In der TCM wird Blasenschwäche oft als Folge einer Schwäche des Nieren-Qi oder einer Absenkung der Milz-Energie betrachtet. Wenn die „Haltekraft“ des Körpers nachlässt, kommt es zu unkontrolliertem Harnverlust oder ständigem Harndrang.</p>
     </div>
 
-    <h2>2. Hilft Akupunktur bei Blasenbeschwerden?</h2>
+    <h2>2. Hilft Akupunktur bei Inkontinenz?</h2>
     <div class="highlight-box">
-        <p>Ja. Akupunktur reguliert die Blasenfunktion, reduziert Entzündungen und lindert Symptome wie Brennen, Harndrang und Druckgefühl. Besonders geeignet bei Reizblase oder chronischen Verläufen.</p>
+        <p>Ja. Akupunktur stärkt die Schließmuskulatur, reguliert die Reizweiterleitung der Nerven und hebt die absinkende Energie an. In Kombination mit Moxa-Therapie (Wärmebehandlung) ist sie besonders effektiv bei Kältegefühl im Unterleib.</p>
     </div>
 
-    <h2>3. Sind Kräuter eine Alternative zu Antibiotika?</h2>
+    <h2>3. Ist eine Behandlung nach der Schwangerschaft sinnvoll?</h2>
     <div class="highlight-box">
-        <p>Bei leichten oder wiederkehrenden Beschwerden ja – sie wirken entzündungshemmend, stärkend und ausleitend. Bei schweren Infekten empfehlen wir eine Kombination mit westlicher Medizin.</p>
+        <p>Absolut. Viele Frauen leiden nach der Geburt unter einer Beckenbodenschwäche. Die TCM unterstützt die Rückbildung, stärkt die tragende Muskulatur und hilft dem Körper, seine natürliche Haltefunktion wiederzuerlangen.</p>
     </div>
 
-    <h2>4. Wie kann TCM vorbeugen?</h2>
+    <h2>4. Was kann man von chinesischen Kräutern erwarten?</h2>
     <div class="highlight-box">
-        <p>Die TCM stärkt die Konstitution, fördert Wärme im Unterleib und hilft, Feuchtigkeit auszuleiten. Besonders für Frauen mit häufigen Infekten ist dies eine gute Ergänzung zur Schulmedizin.</p>
+        <p>Individuell rezeptierte Kräuter kräftigen das Nieren-Yang und wärmen das System von innen. Dies ist besonders wichtig bei chronischer Blasenschwäche, die mit häufigem nächtlichem Wasserlassen einhergeht.</p>
     </div>
 
-    <h2>5. Wie lange dauert die Behandlung?</h2>
+    <h2>5. Wie lange dauert ein Therapiezyklus?</h2>
     <div class="highlight-box">
-        <p>Akute Beschwerden bessern sich oft innerhalb weniger Tage. Zur Stabilisierung der Konstitution empfehlen wir eine 4–6-wöchige Nachbehandlung mit Kräutern und Lebensstilberatung.</p>
+        <p>Wir empfehlen meist 6–10 Behandlungen (1× pro Woche). Bei älteren Patient:innen oder langjährigen Beschwerden ist eine längerfristige Begleitung zur Stabilisierung der Lebensqualität sinnvoll.</p>
     </div>
 
     <div class="cta-section">
-        <h3>Linderung Ihrer Blasenbeschwerden</h3>
-        <p>Buchen Sie Ihren Termin bequem online über unseren Google Calendar.</p>
+        <h3>Stärken Sie Ihre Blasenfunktion</h3>
+        <p>Vereinbaren Sie jetzt Ihren Termin online über unseren Google Calendar.</p>
         <br>
         <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
     </div>
 
     <div class="footer-meta">
         <p>Weitere Informationen: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
-        <p>Expertise in Traditioneller Chinesischer Medizin | Zürich</p>
+        <p>TAI TCM Zürich | Ihr Partner für ganzheitliche Urologie</p>
     </div>
 </body>
 </html>
