--- a/public/en/bladder-weakness.html
+++ b/public/en/bladder-weakness.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment for Bladder Disorders | TAI TCM Zurich</title>
+    <title>Treating Bladder Weakness with TCM | TAI TCM Zurich</title>
     <style>
         :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
         body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
@@ -22,45 +22,45 @@
 <body>
     <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     
-    <img src="../img/akupunktur-blasenentleerungsstoerung-zuerich.webp" alt="TCM Bladder Disorder Treatment Zurich" class="hero-img">
+    <img src="../img/akupunktur-blasenschwaeche-zuerich.webp" alt="TCM Treatment for Bladder Weakness Zurich" class="hero-img">
 
-    <h1>Natural Treatment for Bladder Function Disorders – The TCM Approach</h1>
+    <h1>Overcoming Bladder Weakness – Natural Relief with TCM</h1>
 
-    <h2>1. How does TCM understand bladder function disorders?</h2>
+    <h2>1. How does TCM understand bladder weakness?</h2>
     <div class="highlight-box">
-        <p>From the perspective of TCM, bladder problems arise from a weakness of Kidney Qi, disturbed bladder Qi circulation, or Damp-Heat in the lower burner. Frequently affected are elderly people, stroke patients, or individuals with neurological conditions.</p>
+        <p>In TCM, bladder weakness is often seen as a result of deficient Kidney Qi or a sinking of Spleen energy. When the body's "holding power" weakens, it leads to uncontrolled urine loss or a constant urge to urinate.</p>
     </div>
 
-    <h2>2. Can acupuncture help improve bladder function?</h2>
+    <h2>2. Does acupuncture help with incontinence?</h2>
     <div class="highlight-box">
-        <p>Yes. Through targeted points on the lower abdomen and back, acupuncture can promote nerve activity, strengthen bladder muscles, and alleviate complaints such as incontinence, urinary retention, or frequent urination.</p>
+        <p>Yes. Acupuncture strengthens the sphincter muscles, regulates nerve signaling, and lifts sinking energy. Combined with Moxibustion (heat therapy), it is particularly effective for those experiencing cold sensations in the lower abdomen.</p>
     </div>
 
-    <h2>3. Is a combination with herbal medicine useful?</h2>
+    <h2>3. Is treatment useful after pregnancy?</h2>
     <div class="highlight-box">
-        <p>For chronic weakness or internal cold, we additionally recommend Chinese herbs—such as for strengthening Kidney energy or expelling dampness.</p>
+        <p>Absolutely. Many women suffer from pelvic floor weakness after childbirth. TCM supports recovery, strengthens the supporting muscles, and helps the body regain its natural holding function.</p>
     </div>
 
-    <h2>4. Who is the treatment suitable for?</h2>
+    <h2>4. What can be expected from Chinese herbs?</h2>
     <div class="highlight-box">
-        <p>Both young and elderly patients can benefit from the gentle regulation of TCM—especially for functional or neurologically related bladder problems.</p>
+        <p>Individually prescribed herbs strengthen Kidney Yang and warm the system from within. This is especially important for chronic bladder weakness accompanied by frequent nighttime urination.</p>
     </div>
 
-    <h2>5. When can an effect be expected?</h2>
+    <h2>5. How long is a typical therapy cycle?</h2>
     <div class="highlight-box">
-        <p>Initial improvements often appear after 4–6 treatments. A significant effect is usually achievable after 6–12 sessions, especially with consistent implementation.</p>
+        <p>We usually recommend 6–10 treatments (once per week). For elderly patients or long-term complaints, ongoing support is beneficial to stabilize and maintain quality of life.</p>
     </div>
 
     <div class="cta-section">
-        <h3>Improve Your Quality of Life</h3>
+        <h3>Regain Control of Your Bladder</h3>
         <p>Book your appointment conveniently online via our Google Calendar.</p>
         <br>
         <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
     </div>
 
     <div class="footer-meta">
-        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
-        <p>Expertise in Traditional Chinese Medicine | Zurich</p>
+        <p>More information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Your Partner for Holistic Urology</p>
     </div>
 </body>
 </html>
