--- a/public/en/low-back-pain.html
+++ b/public/en/low-back-pain.html
@@ -2,22 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>Treating Low Back Pain with TCM | TAI TCM Zurich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR LOW BACK PAIN</h1>
-    <p>Professional content for LOW BACK PAIN coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
+    
+    <img src="../img/akupunktur-lumbalgie-zuerich.webp" alt="Acupuncture for low back pain in Zurich" class="hero-img">
+
+    <h1>Relieving Low Back Pain Naturally – The TCM Approach</h1>
+
+    <h2>1. How does TCM view Lumbalgia (low back pain)?</h2>
+    <div class="highlight-box">
+        <p>In TCM, lumbalgia is differentiated based on the underlying cause—such as cold and dampness, Qi and blood stagnation, or kidney deficiency. The lower back area is considered the seat of kidney energy.</p>
+    </div>
+
+    <h2>2. Does acupuncture help with back pain?</h2>
+    <div class="highlight-box">
+        <p>Yes. Acupuncture can relieve pain, loosen muscle tension, and promote circulation. It is particularly effective for muscle stiffness, disc irritation, or acute blockages.</p>
+    </div>
+
+    <h2>3. Can Tuina or Cupping complement the treatment?</h2>
+    <div class="highlight-box">
+        <p>Absolutely. Tuina relaxes the tissue, while cupping activates microcirculation. Combining these with acupuncture often results in a faster therapeutic effect.</p>
+    </div>
+
+    <h2>4. What role do Chinese herbs play?</h2>
+    <div class="highlight-box">
+        <p>For chronic or "cold" lumbalgia, herbs can help strengthen Yang energy, move blood, and provide long-term stabilization for the lower back.</p>
+    </div>
+
+    <h2>5. How often should treatment be performed?</h2>
+    <div class="highlight-box">
+        <p>For acute pain, 3–5 sessions are often sufficient. Chronic conditions usually require treatment 1–2 times per week over 4–6 weeks for long-term recovery.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Free Your Back from Pain</h3>
+        <p>Book your appointment conveniently online via our Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>Find more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Experts in Orthopedic TCM Therapy</p>
     </div>
 </body>
 </html>
