--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 <div class="container" id="main-content"></div>
 
 <footer>
-    &copy; 2026 TAI TCM Clinic Zürich | Kompetenz in Traditioneller Chinesischer Medizin
+    &copy; 2026 TAI TCM GmbH | Kompetenz in Traditioneller Chinesischer Medizin
 </footer>
 
 <script>
