--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                     { name: "Tinnitus", url: "en/tinnitus.html", img: "akupunktur-tinnitus-zuerich.webp", desc: "Natural approaches to reducing ear ringing." },
                     { name: "Trigeminal neuralgia", url: "en/trigeminal-neuralgia.html", img: "akupunktur-trigeminusneuralgie-zuerich.webp", desc: "Pain therapy for facial nerve pain." },
                     { name: "Post-stroke paralysis", url: "en/post-stroke-paralysis.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Supporting motor skill recovery." },
-                    { name: "Bladder emptying disorder", url: "en/bladder-emptying-disorder.html", img: "akupunktur-blasenentleerungsstoerung-zuerich.webp", desc: "TCM regulation of bladder function." },
+                    { name: "Bladder emptying disorder", url: "en/bladder-weakness.html", img: "akupunktur-blasenentleerungsstoerung-zuerich.webp", desc: "TCM regulation of bladder function." },
                     { name: "Bladder weakness", url: "en/bladder-weakness.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "Strengthening bladder muscles and control." }
                 ]},
                 { name: "Orthopaedic conditions", id: "ort", items: [
