--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
                     { name: "Lumbago", url: "en/lumbago.html", img: "akupunktur-lumbalgie-zuerich.webp", desc: "Targeted help for lower back pain." },
                     { name: "Back pain", url: "en/back-pain.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Treating spinal tension and discomfort." },
                     { name: "Sciatica", url: "en/sciatica.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Relieving nerve pain and radiating symptoms." },
-                    { name: "Neck-Shoulder-Arm", url: "en/neck-shoulder-arm.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Help for stiffness and pain in the upper body." },
+                    { name: "Neck-Shoulder-Arm", url: "en/neck-shoulder-arm-syndrome.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Help for stiffness and pain in the upper body." },
                     { name: "Tennis elbow", url: "en/tennis-elbow.html", img: "akupunktur-tennisarm-zuerich.webp", desc: "Therapy for epicondylitis and tendon irritation." },
                     { name: "Arthritis / Osteoarthritis", url: "en/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Natural joint and inflammation therapy." },
                     { name: "Rheumatism", url: "en/rheumatism.html", img: "akupunktur-rheuma-zuerich.webp", desc: "Holistic support for rheumatic diseases." },
