--- a/public/en/smoking-cessation.html
+++ b/public/en/smoking-cessation.html
@@ -22,7 +22,7 @@
 <body>
     <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     
-    <img src="../img/akupunktur-raucherentwoehnung-zuerich.webp" alt="TCM Smoking Cessation in Zurich" class="hero-img">
+    <img src="../img/akupunktur-nikotinentwöhnung-zuerich.webp" alt="TCM Smoking Cessation in Zurich" class="hero-img">
 
     <h1>Master Smoking Cessation Naturally – Your Path to Freedom with TCM</h1>
 
