--- a/public/de/nikotinentwoehnung.html
+++ b/public/de/nikotinentwoehnung.html
@@ -22,7 +22,7 @@
 <body>
     <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     
-    <img src="../img/akupunktur-raucherentwoehnung-zuerich.webp" alt="TCM Raucherentwöhnung in Zürich" class="hero-img">
+    <img src="../img/akupunktur-nikotinentwöhnung-zuerich.webp" alt="TCM Raucherentwöhnung in Zürich" class="hero-img">
 
     <h1>Raucherentwöhnung natürlich meistern – Ihr Weg in die Freiheit mit TCM</h1>
 
